# hermes-skill-adapters

./: .gitignore  .prism-history.md  AGENTS.md  CHANGELOG.md  Makefile  README.md  justfile  pyproject.toml  release-please-config.json  schema.json  sources.yaml
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release-please.yml  sync.yml
overlays/literate-programming/: generated-metadata.yaml  hermes-notes.md
scripts/: generate_frontmatter.py  sync_skills.py  validate_skills.py  validate_sources.py
skills/literate-programming/: SKILL.md
tests/: conftest.py  test_generate_frontmatter.py  test_sync_skills.py  test_validate_skills.py  test_validate_sources.py
