[project]
name = "hermes-skill-adapters"
version = "0.0.0"
description = "Package third-party agent skills as Hermes-compatible skill directories"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
hermes-skill-sync = "scripts.sync_skills:main"
hermes-skill-validate = "scripts.validate_skills:main"
hermes-skill-validate-sources = "scripts.validate_sources:main"
hermes-skill-generate-frontmatter = "scripts.generate_frontmatter:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
